tests/golden/parse_errors/imported_file_parse_error.cd
import "./imported_file_parse_error_deps/lib.cd";
print 1;
